Intro started and structure laid.

--- a/insider.bib
+++ b/insider.bib
@@ -3752,6 +3752,16 @@ url = {https://github.com/cosmos/ics/blob/master/spec.pdf}
     archivePrefix={arXiv},
     primaryClass={cs.SE}
 }
+@inproceedings{kn:20,
+author = {F. Kamm\"uller and U. Nestmann},
+title = {Inter-blockchain protocols with the Isabelle Infrastructure framework},
+booktitle = {Formal Methods for Blockchain, 2nd Int. Workshop, colocated with CAV'20},
+publisher = {Dagstuhl publishing},
+series = {Open Access series in Informatics},
+url = {https://drops.dagstuhl.de/opus/institut_oasics.php?fakultaet=03},
+note = {To appear},
+year = {2020}
+}
 @article{pb:15,
 author = {Paulson, Lawrence and Blanchette, Jasmin},
 year = {2015},
@@ -3810,4 +3820,10 @@ booktitle = {Proceedings of the 7th ACM SIGPLAN International Conference on Cert
 pages = {66--77}, 
 publisher = {ACM},
 year = {2018}
+}
+@misc{bundes:20,
+author = {Die Bundesregierung},
+title = {Die Corona-Warn-App: Unterst\"utzt uns im Kampf gegen Corona},
+note = {German government announcement and support of Coronavirus warning app},
+year = {2020}
 }
