added a shoert seciton on Motivcation to Intro

--- a/paper.tex
+++ b/paper.tex
@@ -121,7 +121,14 @@ airplanes \cite{kam:20b}, privacy in IoT healthcare \cite{kam:18b}, and recently
 to blockchain protocols \cite{kn:20}.
 
 
-\TODO{Motivation: Why bother re-engineering a formal specification for a nicely developed privacy oriented app? physical aspects (adoption rate), formal proof etc}
+%{Motivation: Why bother re-engineering a formal specification for a nicely developed privacy oriented app? physical aspects (adoption rate), formal proof etc}
+The technical advantage of modeling an application in the Isabelle Insider framework lies
+in (a) having explicit representations of infrastructures, actors and policies in a
+formal model that (b) allows additional automated verification of security properties
+within the interactive theorem prover Isabelle.
+Although the Corona-virus app hass been produced based on a sophisticated security
+concept conceived by experts in the field, to our knowledge, no formal verification
+has been involved. 
 
 In this paper, we first provide some background in Section \ref{sec:background}:
 we give a detailed overview of the development history and security and privacy
