fadded to motivationsection in Intro

--- a/paper.tex
+++ b/paper.tex
@@ -126,9 +126,13 @@ The technical advantage of modeling an application in the Isabelle Insider frame
 in (a) having explicit representations of infrastructures, actors and policies in a
 formal model that (b) allows additional automated verification of security properties
 within the interactive theorem prover Isabelle.
-Although the Corona-virus app hass been produced based on a sophisticated security
+Although the Corona-virus app has been produced based on a sophisticated security
 concept conceived by experts in the field, to our knowledge, no formal verification
-has been involved. 
+has been involved. Even if a ``post-production'' formal specification seems pointless,
+it allows to reveal weak points of the architecture, show that the measures that have
+been conceived are suitable to cover those weak points. Thereby, we believe
+that our current work is useful to increase the trust in the Corona-virus app necessary for
+its wide adoption which in turn is crucial for it to be efficient.
 
 In this paper, we first provide some background in Section \ref{sec:background}:
 we give a detailed overview of the development history and security and privacy
