--- a/paper.tex
+++ b/paper.tex
@@ -53,7 +53,12 @@
 \newcommand\ttto[1]{\mbox{{$\to^{#1}$}}}
 \newcommand\ttleq{\mbox{{$\le$}}}
 \newcommand\ttrelI{\mbox{{$\to_{i}$}}}
+\newcommand\ttrelIstar{\mbox{{$\to^*$}}}
+\newcommand\ttrel[1]{\mbox{{$\to_{#1}$}}}
+\newcommand\ttrelstar[1]{\mbox{{$\to_{#1}^*$}}}
 \newcommand\ttalpha{\mbox{{$\alpha$}}}
+\newcommand\ttsupseteq{\mbox{{$\supseteq$}}}
+\newcommand\ttupdownarrow{\mbox{{$\Updownarrow$}}}
 \newcommand\tttau{\mbox{{$\tau$}}}
 \newcommand\ttsubseteq{\mbox{{$\subseteq$}}}
 \newcommand\ttf{\mbox{{$f$}}}
@@ -62,7 +67,13 @@
 \newcommand\ttNatt{\mbox{{$\mathcal{N}$}}}
 \newcommand\ttattand[1]{\mbox{{$\oplus_{\wedge}^{#1}$}}}
 \newcommand\ttattor[1]{\mbox{{$\oplus_{\vee}^{#1}$}}}
-\newcommand\ttrelIstar{\mbox{{$\to_{i}^*$}}}
+\newcommand\ttsigma{\mbox{{$\sigma$}}}
+\newcommand\ttmref[1]{\mbox{{$\sqsubseteq_{#1}$}}}
+\newcommand\ttmeref{\ttmref{\mathcal{E}}}
+\newcommand\ttsn{\mbox{{\texttt{s}$_0$}}}
+\newcommand\ttsigmap{\mbox{{$\sigma'$}}}
+\newcommand\ttecal{\mbox{$\mathcal{E}$}}
+\newcommand\ttimg{\mbox{$\triangleleft$}}
 
 
 \begin{document}
@@ -133,13 +144,23 @@ been conceived are suitable to cover those weak points. Thereby, we believe
 that our current work is useful to increase the trust in the Corona-virus app necessary for
 its wide adoption which in turn is crucial for it to be efficient.
 
+The contributions of this paper are (a) formal re-engineering of the Corona-virus warning app
+(b) providing an additional security and privacy analysis with interactice theorem proving
+certification of a novel view on the system architecture including actors, locations, and policies,
+(c) an formal definition of a security refinement process that allows to improve a system
+based on attacks found by the attack tree analysis.
+
+
 In this paper, we first provide some background in Section \ref{sec:background}:
 we give a detailed overview of the development history and security and privacy
 relevant parts of the Corona-virus warning app (Section \ref{sec:history})
 and some essential facts about the Isabelle Infrastructure framework
 (Section \ref{sec:isainf}).
 We then present our model (Section \ref{sec:model}) and analysis of privacy and
-attacks (Section \ref{sec:ana}) before drawing some conclusions (Section \ref{sec:concl}).
+attacks (Section \ref{sec:ana}). The found attck on the first abstract specification
+motivates refinement. The formal definition of refinement for the Isabelle Infrastructure
+framework is introduced and illustrated on the Corona-virus warning app (Section \ref{sec:ref})
+before drawing some conclusions (Section \ref{sec:concl}).
 
 The formal model in the Isabelle insider framework is fully mechanized and proved in
 Isabelle (sources available \cite{kam:18smc}). 
@@ -152,7 +173,7 @@ Isabelle (sources available \cite{kam:18smc}).
 
 \subsection{Isabelle Infrastructure framework}
 \label{sec:isainf}
-\TODO{Adapt: this is copied from FMBC paper}
+%\TODO{Adapt: this is copied from FMBC paper}
 The Isabelle Infrastructure is built in the interactive generic theorem prover
 Isabelle/HOL \cite{npw:02}. As a framework, it supports formalisation and proof of
 systems with actors and policies. It originally emerged from verification of insider 
@@ -161,6 +182,8 @@ logic combined with Kripke structures and a generic notion of state transitions 
 very suitable to be combined with attack trees into a formal security engineering process
 \cite{suc:16} and framework \cite{kam:19a}.
 
+\subsubsection{Overview}
+\label{sec:isainfover}
 Figure \ref{fig:theorystruc} gives an overview of the Isabelle Infrastructure 
 framework with its layers of object-logics -- each level below embeds the one
 above showing the novel contribution of this paper in blue on the top. 
@@ -172,6 +195,8 @@ above showing the novel contribution of this paper in blue on the top.
 \caption{Generic Isabelle Infrastructure framework applied to Corona-warning app.}
 \label{fig:theorystruc}
 \end{figure}
+
+\subsubsection{Instantiation of Framework}
 The formal model of the Corona-warning app uses the Isabelle Infrastructure framework instantiating it
 by reusing its concept of {\it actors} for users and smartphones whereby locations correspond
 to physical locations. The Ephermeral IDs, their sending and change is added to Infrastructures
@@ -181,12 +206,26 @@ presented in Section \ref{sec:model}.
 Technically, an Isabelle theory file \texttt{Infrastructure.thy} builds on top of the theories for Kripke 
 structures and CTL (\texttt{MC.thy}), attack trees (\texttt{AT.thy}), and security refinement 
 (\texttt{Refinement.thy}). Thus all these concepts can be used to specify the formal model
-for IBC, express relevant and interesting properties and conduct interactive proofs (with the 
-full support of the powerful and highly automated proof support of Isabelle).
-The IBC theory itself is an adaptation of the Infrastructure theory of the 
-Isabelle Infrastructure framework and reuses (or slightly adapts) existing concepts. 
-In the remainder of this paper, we introduce the model that we conceived for IBC. 
+for the Corona-virus warning app, express relevant and interesting properties, and conduct
+interactive proofs (with the full support of the powerful and highly automated proof support
+of Isabelle).
+%The Corona-virus warning app theory itself is an adaptation of the Infrastructure theory of the 
+%Isabelle Infrastructure framework and reuses (or slightly adapts) existing concepts. 
+%In the remainder of this paper, we introduce the model that we conceived for . 
 All Isabelle sources are available online \cite{kam:20gitsc}.
+
+\subsubsection{Refinement}
+An interesting feature that has been integrated into the Isabelle Infrastructure
+framework motivated by security engineering formal specifications for IoT healthcare
+system is  is an extension of the formal specifciation process introducing
+refinement of Kripke structures \cite{kam:19a,kam:20a}. It refines a system model based on a 
+formal definition of a combination of trace refinement and structural 
+refinement (or datatype refinement). The definition allows to prove property preservation results 
+crucial for an iterative development process.
+The refinements of the system specification  can be interleaved with attack 
+analysis while security properties can be proved in Isabelle. In each iteration
+security qualities are accumulated while continuously attack trees scrutinize
+the design.
 
 
 \section{Model}
@@ -194,6 +233,135 @@ All Isabelle sources are available online \cite{kam:20gitsc}.
 
 \section{Analysis}
 \label{sec:ana}
+
+\section{Refinement}
+\label{sec:ref}
+\TODO{This section is just copied over from arxive paper - adapt}
+Intuitively, a refinement changes some aspect of the type of
+the state, for example, replaces a data type by a richer datatype or
+restricts the behaviour of the actors. The former is expressed directly 
+by a mapping of datatypes, the latter is incorporated into the state
+transition relation of the Kripke structure that corresponds to the 
+transformed model.
+%This relationship between the Kripke structure can be better understood
+%visually (see Figure \ref{fig:modtrans})
+In other words, we can encode a refinement within our framework
+as a relation on Kripke structures that is parametrized additionally by
+a function that maps the refined type to the abstract type.
+The direction ``from refined to abstract'' of this type mapping may seem 
+curiously counter-intuitive. However, the actual refinement is given by the 
+refinement that uses this function as an input. The refinement
+then refines an abstract to a more concrete system specification. 
+The additional layer for the refinement 
+%(the red box in Figure \ref{fig:theorystruc})
+can be formalised in Isabelle as a
+%second\footnote{The first refinement 
+%relation in this framework is on attack trees summarized in Section \ref{sec:at}.} 
+refinement relation 
+$\sqsubseteq_{\mathcal{E}}$. 
+The relation \texttt{mod\_trans} is typed as a relation over triples --
+a function from a threefold Cartesian product to \texttt{bool}, the 
+type containing true and false only.  
+The type variables $\sigma$ and $\sigma'$ input to the type constructor 
+\texttt{Kripke} represent the abstract state type and the concrete state type. 
+Consequently, the middle element of the triples selected by the relation 
+\texttt{mod\_trans} is a function of type $\sigma' \Rightarrow \sigma$ 
+mapping elements of the refined state to the abstract state.
+The expression in quotation marks after the type is again the
+infix syntax in Isabelle that allows the definition of mathematical notation
+instead of writing \texttt{mod\_trans} in prefix manner. This nicer infix
+syntax is already used in the actual definition.
+Finally, the arrow \texttt{\ttImp} is the implication of Isabelle's  meta-logic
+while $\ttimp$ is the one of the {\it object} logic HOL. 
+They are logically equivalent but of different
+types: within a HOL formula $P$, for example, as below $\forall x. P \ttimp Q$, only the implication $\ttimp$
+can be used.
+\begin{ttbox}
+ mod_trans ::  (\ttsigma Kripke \tttimes (\ttsigma' \ttfun \ttsigma) \tttimes \ttsigma' Kripke) 
+               \ttfun bool                  ("_ \ttmref{(\_)} _")
+  K \ttmeref K' \ttequiv \ttforall s' \ttin states K'. \ttforall s \ttin init K'. 
+             s \ttrelstar{\sigma'} s' \ttimp \ttecal(s) \ttin init K 
+             \ttand \ttecal(s) \ttrelstar{\sigma} \ttecal(s')
+\end{ttbox}
+The definition of \texttt{K \ttmeref\, K'} states that for any state $s$ 
+of the refined Kripke structure that can be reached by the state transition
+in zero or more steps from an initial state $s_0$ of the refined Kripke 
+structure, the mapping ${\mathcal E}$ from the refined to the abstract 
+model's state must preserve this reachability, i.e., the image of
+$s_0$ must also be an initial state and from there the image of $s$
+under ${\mathcal E}$ must be reached with $0$ or $n$ steps.
+
+\subsection{Property Preserving System Refinement}
+A first direct consequence of this definition is the following lemma
+where the operator \texttt{$\ttimg$} in \texttt{\ttecal\ttimg(init K')}
+represents function image, that is the set, $\{\ttecal(x). x \in \texttt{init K'}\} $.
+\begin{ttbox}
+{\bf{lemma}} init_ref: K \ttmeref K' \ttImp \ttecal\ttimg(init K') \ttsubseteq init K
+\end{ttbox}
+A more prominent consequence of the definition of refinement 
+is that of property preservation. Here, we show that refinement preserves the
+CTL property of ${\sf EF} s$ which means that a reachability property true in the
+refined  model \texttt{K'} %has also been 
+is already true in the abstract model.
+A state set $s'$ represents a property %since we use 
+in the predicate transformer view of properties as sets of states. 
+The additional condition on initial states ensures that we cannot ``forget'' them. 
+%initial states.
+%The theorem states that, if the 
+%property \texttt{{\sf EF} s'} is true in the concrete model its  has been true 
+%can be reached from the initial state in 
+%\texttt{K'} then it is also possible  to reach the image of this property
+% in the abstract Kripke structure \texttt{K}.
+\begin{ttbox}
+{\bf{theorem}} prop_pres: 
+   K \ttmeref K'  \ttImp init K \ttsubseteq \ttecal\ttimg(init K') \ttImp
+   \ttforall s' \ttin Pow(states K'). K' \ttvdash {\sf EF} s' 
+              \ttimp K \ttvdash {\sf EF} (\ttecal\ttimg(s'))
+\end{ttbox}
+It is remarkable, that our definition of refinement by Kripke 
+structure refinement entails property preservation and makes it possible 
+to prove this as a theorem in Isabelle once for all, i.e., as a meta-theorem.
+However, this is due to the fact that our generic definition of state transition
+allows to explicitly formalise such sophisticated concepts like reachability.
+For practical purposes, however, the proof obligation of showing that
+a specific refinement is in fact a refinement is rather complex
+justly because of the explicit use of the transitive closure of the state
+transition relation.
+In most cases, the refinement will be simpler. Therefore, we offer
+additional help by the following theorem that uses a stronger characterisation
+of Kripke structure refinement and shows that our refinement follows
+from this.
+\begin{ttbox}
+{\bf{theorem}} strong_mt: 
+\ttecal\ttimg(init K') \ttsubseteq init K \ttand s \ttrel{\sigma'} s' \ttimp \ttecal(s) \ttrel{\sigma} \ttecal(s') 
+\ttImp K \ttmeref K'
+\end{ttbox}
+This simpler characterisation is in fact a stronger one: we could have $s \ttrel{\sigma'} s'$ 
+in the refined Kripke structure \texttt{K'} and $\neg(\ttecal(s) \ttrel{\sigma} \ttecal(s'))$
+but neither $s$ nor $s'$ are reachable from initial states in \texttt{K'}.
+For cases, where we want to have the simpler one-step proviso but still need 
+reachability we provide a slightly weaker version of \texttt{strong\_mt}.
+\begin{ttbox}
+{\bf{theorem}} strong_mt':  
+\ttecal\ttimg(init K') \ttsubseteq init K \ttand (\ttexists s0 \ttin init K'. s0  \ttrelIstar s)
+ \ttand s \ttrel{\sigma'} s' \ttimp \ttecal(s) \ttrel{\sigma} \ttecal(s') \ttImp K \ttmeref K'
+\end{ttbox}
+
+This idea of property preservation coincides with the classical idea of
+trace refinement as it is given in process algebras like CSP. In this view,
+the properties of a system are given by the set of its traces. Now, a refinement
+of the system is given by another system that has a subset of the traces of the 
+former one.
+Although the principal idea is similar, we greatly extend it since our notion
+additionally incorporates refinement. Since we include a state map 
+\texttt{\ttsigma'\ttfun \ttsigma} in our refinement map, we additionally
+allow structural refinement: the state map generalises the basic idea of
+trace refinement by traces corresponding to each other but allows additionally
+an exchange of data types. 
+As we see in the application to the case study, the refinement steps may
+sometimes just specialise the traces: in this case the state map 
+\texttt{\ttsigma'\ttfun \ttsigma} is just identity. 
+
 
 \section{Conclusions}
 \label{sec:concl}
