added one more comment of Bianca on potential of theoretical study of refinement

--- a/paper.tex
+++ b/paper.tex
@@ -117,7 +117,7 @@ was a quite costly project but this was mainly due to the management of
 Telekom and SAP being in the driving seat. But the app has been designed with great
 attention on privacy:  a distributed architecture \cite{} has been adopted after a long and
 heated debate with supporters of a central architecture. The distributed architecture is
-based on a very clever distributed application design whereby users phones are sending
+based on a very clever distributed application design whereby users' phones are sending
 highly anonymized so called ``Ephemeral IDs'' at physical locations via the Bluetooth
 protocol. The app saves those IDs of people in close proximity. When at a later date an
 infected person reports his infection to a central server, the unique root ID is published
@@ -289,7 +289,10 @@ The refinements of the system specification  can be interleaved with attack
 analysis while security properties can be proved in Isabelle. In each iteration
 security qualities are accumulated while continuously attack trees scrutinize
 the design.
-
+One of the contributions of this paper is to explore different concepts of refinement:
+the formal expression of refinemnet, enables to pin down (i.e. exemplify) different concepts
+of refinement (data refinement, action refinement, trace refinement (aka spec refinement) and
+combinations thereof with concrete attack scenarios. 
 
 \section{Model}
 \label{sec:model}
